Add tag page, footer and cookie alert

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,6 @@
 {
     "title": "Paweł Dymek - Software Developer",
-    "meta-description": "I am a software developer, and this is my blog where I share interesting knowledge."
+    "meta-description": "I am a software developer, and this is my blog where I share interesting knowledge.",
+    "cookie-alert": "This site uses cookies to provide you a better user experience. You can block them in your web browser settings. Incredible, isn't it?",
+    "close": "Close"
 }
