--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -1,4 +1,6 @@
 {
     "title": "Paweł Dymek - Software Developer",
-    "meta-description": "Jestem software deweloperem, a to mój blog, na którym dzielę się ciekawą wiedzą."
+    "meta-description": "Jestem software deweloperem, a to mój blog, na którym dzielę się ciekawą wiedzą.",
+    "cookie-alert": "Ta strona używa ciastek (ang. \"cookies\"), aby mogła działać poprawnie. Możesz je zablokować w ustawieniach przeglądarki internetowej. Nieprawdopodobne, prawda?",
+    "close": "Zamknij"
 }
