--- a/public/locales/pl/post.json
+++ b/public/locales/pl/post.json
@@ -1,3 +1,5 @@
 {
-    "posted": "Opublikowano"
+    "posted": "Opublikowano",
+    "read-time": "{{ time }} min. czytania",
+    "read-more": "Czytaj dalej"
 }
